# erbsland-maze

./: .buildinfo  .gitignore  README.md  README.rst  command-line.html  examples.html  generate-via-api.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  security_hashes.txt  setup.cfg
.doctrees/: command-line.doctree  environment.pickle  examples.doctree  generate-via-api.doctree  index.doctree
.github/workflows/: build-docs.yml  publish.yml  tests.yml
_sources/: command-line.rst.txt
docs/: changelog.rst  command-line.rst  conf.py  examples.rst  generate-via-api.rst  index.rst
src/: generate_maze.py
src/erbsland_maze/: __init__.py  _about.py  about.py  blank_modifier.py  cli.py  closing.py  closing_modifier.py  closing_type.py  color.py  connection_side.py  corner.py  direction.py  error_mark.py  frame_modifier.py  generator.py  generator_error.py  generator_setup.py  generator_stack.py  graphical_layout.py  layout.py  line.py  location_grid.py  merge_modifier.py  modifier.py  modifier_error.py  modifier_type.py  modifiers.py  parity.py  path_end.py  path_groups.py  path_join_info.py  path_pair.py  placement.py  point.py  poly_line.py  rectangle.py  room.py  room_connection.py  room_grid.py  room_insets.py  (+13 more)
tests/: test_generation.py  test_parsing.py  test_svg_layout.py
utilities/: run.py
utilities/conf/: github_workflows.elcl  pre_commit.elcl  security_hashes.elcl
utilities/dev/: __init__.py  github_workflows.py  pre_commit.py  security_hashes.py
utilities/lib/: config.py  error.py  file_update.py  path_safety.py  safe_tool.py  utility.py
