[build-system]
requires = [
    "hatchling>=1.27",
    "hatch-vcs>=0.5"
]
build-backend = "hatchling.build"

[project]
name = "erbsland-maze"
dynamic = ["version"]
description = "A fast, modular and customizable generator for rectangular mazes."
readme = "README.rst"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
authors = [
    { name = "Erbsland DEV", email = "info@erbsland.dev" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "pycairo >= 1.26.0"
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.2",
    "sphinx-rtd-theme>=3.0"
]
test = [
    "pytest>=8.0"
]

[project.scripts]
elmaze = "erbsland_maze.cli:main"

[project.urls]
Documentation = "https://erbsland-dev.github.io/erbsland-maze/"
Source = "https://github.com/erbsland-dev/erbsland-maze"
Issues = "https://github.com/erbsland-dev/erbsland-maze/issues"

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>\\d+\\.\\d+(?:\\.\\d+)?)$"

[tool.hatch.build.hooks.vcs]
version-file = "src/erbsland_maze/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/erbsland_maze"]

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/tests",
    "/LICENSE",
    "/LICENSE.md",
    "/README.rst",
    "/pyproject.toml"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
