[metadata]
name = erbsland_maze
version = attr: erbsland_maze._about.VERSION
author = Erbsland DEV
author_email = info@erbsland.dev
description = A fast, modular and customizable generator for rectangular mazes.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/erbsland-dev/erbsland-maze
project_urls =
    Documentation=https://erbsland-dev.github.io/erbsland-maze/
    Source=https://github.com/erbsland-dev/erbsland-maze
    Issues=https://github.com/erbsland-dev/erbsland-maze/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Topic :: Games/Entertainment :: Puzzle Games
    Topic :: Multimedia :: Graphics
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.12
install_requires =
    pycairo >= 1.26.0

[options.packages.find]
where = src